fixed hamburger icon mobile

--- a/index.css
+++ b/index.css
@@ -62,6 +62,16 @@ button {
   max-width: 60px;
 }
 
+.hamburger-icon {
+  font-size: 1.75rem;
+  color: #fff;
+  background-color: #313131;
+  max-width: 60px;
+  text-align: center;
+  border-right: solid #000 2px;
+  line-height: 60px;
+}
+
 .login-button {
   color: #fff;
   background-color: #313131;
